@@ -4,9 +4,9 @@ organization := "net.ground5hark.sbt"
 
 name := "sbt-css-compress"
 
-version := "0.1.4"
+version := "0.2.0-SNAPSHOT"
 
-scalaVersion := "2.10.4"
+scalaVersion := "2.10.6"
 
 resolvers ++= Seq(
   "Typesafe Releases" at "http://repo.typesafe.com/typesafe/releases/",
@@ -16,17 +16,27 @@ resolvers ++= Seq(
   Resolver.mavenLocal
 )
 
-addSbtPlugin("com.typesafe.sbt" %% "sbt-web" % "1.0.2")
+def addCrossSbtPlugin(dependency: ModuleID): Setting[Seq[ModuleID]] =
+  libraryDependencies += {
+    val sbtV = (sbtBinaryVersion in pluginCrossBuild).value
+    val scalaV = (scalaBinaryVersion in update).value
+    Defaults.sbtPluginExtra(dependency, sbtV, scalaV)
+  }
+
+addCrossSbtPlugin("com.typesafe.sbt" %% "sbt-web" % "1.4.3")
+
+libraryDependencies += "com.yahoo.platform.yui" % "yuicompressor" % "2.4.8"
 
 publishMavenStyle := true
 
-scriptedSettings
+crossSbtVersions := Seq("0.13.16", "1.0.2")
 
+scriptedSettings
 scriptedLaunchOpts ++= Seq(
   "-Xmx1024M",
-  "-XX:MaxPermSize=256M",
   s"-Dproject.version=${version.value}"
 )
+//scriptedBufferLog := false
 
 publishTo := {
   val nexus = "https://oss.sonatype.org/"
@@ -37,23 +47,24 @@ publishTo := {
   })
 }
 
-pomExtra := (
+pomExtra := {
   <url>https://github.com/ground5hark/sbt-css-compress</url>
-  <licenses>
-    <license>
-      <name>MIT</name>
-      <url>http://opensource.org/licenses/MIT</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
-  <scm>
-    <url>git@github.com:ground5hark/sbt-css-compress.git</url>
-    <connection>scm:git:git@github.com:ground5hark/sbt-css-compress.git</connection>
-  </scm>
-  <developers>
-    <developer>
-      <id>ground5hark</id>
-      <name>John Bernardo</name>
-      <url>https://github.com/ground5hark</url>
-    </developer>
-  </developers>)
+    <licenses>
+      <license>
+        <name>MIT</name>
+        <url>http://opensource.org/licenses/MIT</url>
+        <distribution>repo</distribution>
+      </license>
+    </licenses>
+    <scm>
+      <url>git@github.com:ground5hark/sbt-css-compress.git</url>
+      <connection>scm:git:git@github.com:ground5hark/sbt-css-compress.git</connection>
+    </scm>
+    <developers>
+      <developer>
+        <id>ground5hark</id>
+        <name>John Bernardo</name>
+        <url>https://github.com/ground5hark</url>
+      </developer>
+    </developers>
+}
